# NRISamples

./: .args  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  1-Deploy.bat  1-Deploy.sh  2-Build.bat  2-Build.sh  3-Test samples.bat  4-Clean.bat  4-Clean.sh  CMakeLists.txt  README.md  ShaderCompilation.cmake  Shaders.cfg
Shaders/: BindingBridge.hlsli  Box.vs.hlsl  Box0.fs.hlsl  Box1.fs.hlsl  Box2.fs.hlsl  Box3.fs.hlsl  Box4.fs.hlsl  Box5.fs.hlsl  Box6.fs.hlsl  Box7.fs.hlsl  Compute.cs.hlsl  Forward.fs.hlsl  Forward.vs.hlsl  ForwardBindless.fs.hlsl  ForwardBindless.vs.hlsl  ForwardDiscard.fs.hlsl  ForwardResources.hlsli  ForwardTransparent.fs.hlsl  GenerateSceneDrawCalls.cs.hlsl  NRICompatibility.hlsli  RayTracingBox.rchit.hlsl  RayTracingBox.rgen.hlsl  RayTracingTriangle.rchit.hlsl  RayTracingTriangle.rgen.hlsl  RayTracingTriangle.rmiss.hlsl  SceneViewerBindlessStructs.h  Simple.fs.hlsl  Simple.vs.hlsl  Surface.cs.hlsl  Triangle.fs.hlsl  Triangle.vs.hlsl  TriangleFlexibleMultiview.vs.hlsl  Triangles.fs.hlsl  Triangles.vs.hlsl
Source/: 00_Clear.cpp  01_Triangle.cpp  02_SceneViewer.cpp  03_Readback.cpp  04_AsyncCompute.cpp  05_Multithreading.cpp  06_MultiGPU.cpp  07_RayTracing_Triangle.cpp  08_RayTracing_Boxes.cpp  09_Wrapper.cpp  AsyncCompute.cpp  BindlessSceneViewer.cpp  CTest.c  Clear.cpp  DeviceInfo.cpp  LowLatency.cpp  MultiGPU.cpp  MultiThreading.cpp  Multiview.cpp  RayTracingBoxes.cpp  RayTracingTriangle.cpp  Readback.cpp  Resize.cpp  SceneViewer.cpp  Triangle.cpp  Wrapper.cpp
Source/Shaders/: 02_Forward.fs.hlsl  02_Forward.vs.hlsl  02_ForwardDiscard.fs.hlsl  02_ForwardTransparent.fs.hlsl  04_Surface.cs.hlsl  04_Triangles.fs.hlsl  04_Triangles.vs.hlsl  05_Box0.fs.hlsl  05_Box1.fs.hlsl  05_Box2.fs.hlsl  05_Box3.fs.hlsl  05_Box4.fs.hlsl  05_Box5.fs.hlsl  05_Box6.fs.hlsl  05_Box7.fs.hlsl  06_Simple.fs.hlsl  07_RayTracing_Triangle.rchit.hlsl  07_RayTracing_Triangle.rgen.hlsl  08_RayTracing_Box.rchit.hlsl  08_RayTracing_Box.rmiss.hlsl  Box.vs.hlsl  Box1.fs.hlsl  Box2.fs.hlsl  Forward.fs.hlsl  ForwardResources.hlsli  RayTracingBox.rgen.hlsl  Triangle.vs.hlsl
